Colaboratory를 통해 생성됨

--- a/algorithm/baekjoon/baekjoon_step8.ipynb
+++ b/algorithm/baekjoon/baekjoon_step8.ipynb
@@ -6,7 +6,7 @@
       "name": "baekjoon_step8.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaHOwbsyApewOrw+sR4hM/",
+      "authorship_tag": "ABX9TyNROBtPW5f9FJvED/bvqzHA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,6 +76,17 @@
     {
       "cell_type": "code",
       "source": [
+        "[6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,114,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,299,303,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,393,397,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,484,488,508,557,558,559,560,561,562,563,564,565,566,567,568,569,570,571,572,573,574,575,576,578,582,602,644,645,646,647,648,649,650,651,652,653,654,655,656,657,658,659,660,661,662,663,665,669,689,738,739,740,741,742,743,744,745,746,747,748,749,750,751,752,753,754,755,756,757,759,763,783,825,826,827,828,829,830,831,832,833,834,835,836,837,838,839,840,841,842,843,844,846,850,968]"
+      ],
+      "metadata": {
+        "id": "rw5Uv9vhLQ-3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "n = int(input())\n",
         "numbers = map(int, input().split())\n",
         "prime = 0\n",
@@ -94,7 +105,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-Yj5CX9_dSxd",
-        "outputId": "0a29c95d-caa9-47ab-9aa8-a85d5e3e1421"
+        "outputId": "853cba6c-924e-4c02-d869-2a65a9e2b706"
       },
       "execution_count": null,
       "outputs": [
@@ -102,9 +113,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "4\n",
-            "1 3 5 7\n",
-            "3\n"
+            "1\n",
+            "6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,114,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253,254,255,256,257,258,259,260,261,262,263,264,265,266,267,268,269,270,271,272,273,274,275,276,277,278,279,280,281,282,283,284,285,286,287,288,289,290,291,292,293,294,295,296,297,299,303,328,329,330,331,332,333,334,335,336,337,338,339,340,341,342,343,344,345,346,347,348,349,350,351,352,353,354,355,356,357,358,359,360,361,362,363,364,365,366,367,368,369,370,371,372,373,374,375,376,377,378,379,380,381,382,383,384,385,386,387,388,389,390,391,393,397,415,416,417,418,419,420,421,422,423,424,425,426,427,428,429,430,431,432,433,434,435,436,437,438,439,440,441,442,443,444,445,446,447,448,449,450,451,452,453,454,455,456,457,458,459,460,461,462,463,464,465,466,467,468,469,470,471,472,473,474,475,476,477,478,479,480,481,482,484,488,508,557,558,559,560,561,562,563,564,565,566,567,568,569,570,571,572,573,574,575,576,578,582,602,644,645,646,647,648,649,650,651,652,653,654,655,656,657,658,659,660,661,662,663,665,669,689,738,739,740,741,742,743,744,745,746,747,748,749,750,751,752,753,754,755,756,757,759,763,783,825,826,827,828,829,830,831,832,833,834,835,836,837,838,839,840,841,842,843,844,846,850,968\n",
+            "76\n"
           ]
         }
       ]
@@ -295,6 +306,143 @@
             "11\n",
             "13\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings = ['ab', 'ba', 'ac']\n",
+        "n = 1"
+      ],
+      "metadata": {
+        "id": "3P3neM1iR7Xk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strings.sort()\n",
+        "strings"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_6BKuTbKSb20",
+        "outputId": "8c068687-241f-4d8e-b8ed-36668af8a418"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['ab', 'ac', 'ba']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "strings[i][n].sort()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "3vvsMzstR6dV",
+        "outputId": "db784ff4-e210-4b95-9af8-51a75f4ae978"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def solution(n):\n",
+        "    answer = 0\n",
+        "    a = 0\n",
+        "    for i in range(2, n+1):\n",
+        "        for j in range(2, i+1):\n",
+        "            if i % j  == 0:\n",
+        "                a+=1\n",
+        "        if a == 1:\n",
+        "            answer+=1\n",
+        "            a = 0\n",
+        "    return answer"
+      ],
+      "metadata": {
+        "id": "CdWQRNfNSE31"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n = 10"
+      ],
+      "metadata": {
+        "id": "Vt_4ry1so05u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "answer = 0\n",
+        "a = 0\n",
+        "for i in range(2, n+1):\n",
+        "    for j in range(2, i+1):\n",
+        "        if i % j  == 0:\n",
+        "            a+=1\n",
+        "    if a == 1:\n",
+        "        answer+=1\n",
+        "        a = 0\n",
+        "answer"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OTuogbhborrH",
+        "outputId": "c16754eb-39b6-4294-b5df-a3c11fa32a64"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 6
         }
       ]
     }
